# denolle-lab.github.io

./: Gemfile  README.md  _config.yml  publications.bib
.github/workflows/: people-validate.yml
_data/: alumni_members.yml  environmental-seismology.yml  latest.yml  publist.yml  team_members.yml
_data/research/: earthquakes.yml  environment.yml  geoscience-ai.yml
_includes/: head.html  header.html  latest.html  latest_scroll.html  research_preview_section.html
_layouts/: default.html  homelay.html  latest.html  member.html  people.html
_pages/: allnews.md  codes.md  group.md  home.md  latest.md  openings.md  people.md  people_old.md  people_safe.md  publications.md  research-preview.md  research.md  research_old.md  teaching.md
_pages/_archived/: openings.md
_pages/people/: hiroto-bito.md  jane-doe.md  lydia-kelley.md  marine-denolle.md  michael-hemmett.md  yiyu-ni.md
_pages/research-details/: earthquake-seismology.md  earthquakes.md  environment.md  environmental-seismology.md  geoscience-and-ai.md
_plugins/: bibtex_converter.rb
css/: custom.css  main.scss
docs/: PUBLICATIONS.md
gaia-hazlab-surface-events/: .gitignore  AGENTS.md  LICENSE  README.md  environment.yml  pixi.toml  pyproject.toml
gaia-hazlab-surface-events/notebooks/: README.md
gaia-hazlab-surface-events/src/gaia_hazlab_surface/: __init__.py
gaia-hazlab-surface-events/tests/: test_imports.py
js/: latest-scroll.js
scripts/: check_people.py
